@@ -16,7 +16,7 @@
                 	<LIGHT_X10 KEY="02" ACTIVE="Y" X10HOUSE_CODE="A" NAME="Family Room" DISPLAY_NAME="FAMILY_LIGHTS2"/>
                 
                     <TOGGLE_OUTPUT ACTIVE="Y" KEY="011" AREA="001" NAME="Garage Door Opener" DISPLAY_NAME="GARAGE_DOOR_OPENER" />
-					<TOGGLE_OUTPUT ACTIVE="Y" KEY="012" AREA="001" NAME="Front Gate Strike" DISPLAY_NAME="FRONT_GATE" />
+					<TOGGLE_OUTPUT ACTIVE="Y" KEY="003" AREA="001" NAME="Front Gate Strike" DISPLAY_NAME="FRONT_GATE" />
                 	<TOGGLE_OUTPUT ACTIVE="Y" KEY="018" AREA="001" NAME="Sprinkler Side Garden" DISPLAY_NAME="SPRINKLER_SIDE_GARDEN" />
                 	<TOGGLE_OUTPUT ACTIVE="Y" KEY="014" AREA="001" NAME="Sprinkler Back Grass" DISPLAY_NAME="SPRINKLER_BACK_GRASS" />
                 	<TOGGLE_OUTPUT ACTIVE="Y" KEY="016" AREA="001" NAME="Sprinkler Back Garden" DISPLAY_NAME="SPRINKLER_BACK_GARDEN" />
@@ -30,7 +30,7 @@
                 	<CONTACT_CLOSURE ACTIVE="Y" KEY="002" AREA="001" NAME="Family Room PIR"  DISPLAY_NAME="FAMILY_PIR"/>
 					<CONTACT_CLOSURE ACTIVE="Y" KEY="001" AREA="001" NAME="Downstairs Hall PIR"  DISPLAY_NAME="HALL_PIR"/>
 					<CONTACT_CLOSURE ACTIVE="Y" KEY="008" AREA="001" NAME="Laundry Door Reed"  DISPLAY_NAME="LAUNDRY_DOOR"/>
-					<CONTACT_CLOSURE ACTIVE="Y" KEY="003" AREA="001" NAME="Master Bedroom PIR"  DISPLAY_NAME="MASTERBED_PIR"/>
+					<CONTACT_CLOSURE ACTIVE="N" KEY="003" AREA="001" NAME="Master Bedroom PIR"  DISPLAY_NAME="MASTERBED_PIR"/>
 					<CONTACT_CLOSURE ACTIVE="Y" KEY="012" AREA="001" NAME="Downstairs Smoke Detector"  DISPLAY_NAME="DOWNSTAIRS_SMOKE"/>
 					<CONTACT_CLOSURE ACTIVE="Y" KEY="005" AREA="001" NAME="Office PIR"  DISPLAY_NAME="STUDY_PIR"/>
 					<CONTACT_CLOSURE ACTIVE="Y" KEY="017" AREA="001" NAME="Downstairs Hall PIR"  DISPLAY_NAME="HALL_PIR"/>
