@@ -135,10 +135,8 @@ public class Serial extends BaseComms implements CommDevice
 						serialListener.setInputStream (is);
 						serialListener.setDeviceName(deviceName);
 						if (commsSend != null){
-							synchronized (commsSend){
-								commsSend.setHandleEvents(false);
-								commsSend.notify();
-							}
+							commsSend.setHandleEvents(false);
+							commsSend.notify();
 						}
 						commsSend = new CommsSend(commsGroup);
 						commsSend.setInterCommandInterval(interCommandInterval);
