@@ -1,4 +1,4 @@
-#Sun Jan 07 20:37:27 EST 2007
+#Sun Jan 07 22:59:51 EST 2007
 major_version=1.6b
-minor_version=24
+minor_version=25
 app_name=eLife
